// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Test Suite > Command: <check> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔦 Checking upgrade with id: test-upgrade-mini
[90m┌───────────[39m[90m┬───────────────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Directory [39m[90m│[39m[31m File Name         [39m[90m│[39m[31m Readable? [39m[90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m ./        [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m common.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m mainnet2/ [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m└───────────[39m[90m┴───────────────────[39m[90m┴───────────┘[39m
🛬 Fetching contract 0x75dE2E1ABB12Bc54A5aB04b2761AFc083Be54dC5 abi from mainnet
[90m┌────────────────────[39m[90m┬───────────────[39m[90m┬────────────────────────────────────────────────────────────┐[39m
[90m│[39m[31m Directory          [39m[90m│[39m[31m Function Name [39m[90m│[39m[31m Args                                                       [39m[90m│[39m
[90m├────────────────────[39m[90m┼───────────────[39m[90m┼────────────────────────────────────────────────────────────┤[39m
[90m│[39m mainnet2           [90m│[39m upgrade       [90m│[39m [                                                          [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m  {                                                         [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   l2ProtocolUpgradeTx: {                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    txType: '0',                                            [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    from: '0',                                              [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    to: '0',                                                [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    gasLimit: '0',                                          [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    gasPerPubdataByteLimit: '0',                            [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    maxFeePerGas: '0',                                      [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    maxPriorityFeePerGas: '0',                              [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    paymaster: '0',                                         [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    nonce: '0',                                             [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    value: '0',                                             [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    reserved: [                                             [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m     '0',                                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m     '0',                                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m     '0',                                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m     '0'                                                    [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    ],                                                      [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    data: '0x',                                             [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    signature: '0x',                                        [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    factoryDeps: [],                                        [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    paymasterInput: '0x',                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    reservedDynamic: '0x'                                   [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   },                                                       [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   factoryDeps: [],                                         [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   bootloaderHash: '0x000...00000',                         [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   defaultAccountHash: '0x000...00000',                     [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   verifier: '0x000...00000',                               [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   verifierParams: {                                        [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    recursionNodeLevelVkHash: '0x5a3...3d080',              [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    recursionLeafLevelVkHash: '0x400...adc0a',              [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m    recursionCircuitsSetVksHash: '0x000...00000'            [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   },                                                       [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   l1ContractsUpgradeCalldata: '0x',                        [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   postUpgradeCalldata: '0x',                               [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   upgradeTimestamp: '1710264138',                          [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   newProtocolVersion: '22',                                [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m   newAllowList: '0x000...00000'                            [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m  }                                                         [90m│[39m
[90m│[39m                    [90m│[39m               [90m│[39m ]                                                          [90m│[39m
[90m└────────────────────[39m[90m┴───────────────[39m[90m┴────────────────────────────────────────────────────────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <list> > should match snapshot 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <list> > should not display table when no upgrades found 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in ./ for upgrades...
ℹ️  No upgrades found in current directory.
"
`;

exports[`CLI Output Test Suite > Command: <list> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;
